--- a/events-hub/src/index.html
+++ b/events-hub/src/index.html
@@ -10,4 +10,11 @@
 <body>
   <app-root></app-root>
 </body>
-</html>
+
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", "Nanum Gothic", sans-serif;
+  font-weight: 500;
+}</style></html>
